<resources>
    <string name="app_name">ListAdapter</string>
    <string name="speech">speech</string>
    <string name="refreshHeartRate">refresh heart rate</string>
    <string name="message_show_here">message show here</string>
    <string name="describe_the_word">describe the Word</string>
    <string name="area_number">Area number</string>
    <string name="preset_number_could_be_empty">preset number(could be empty)</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="word">word</string>
    <string name="domain">domain</string>
    <string name="preset_number">preset_number</string>
    <string name="domain_name">domain name</string>
    <string name="go">go</string>
    <string name="Control">Control</string>
    <string name="control">control</string>
    <string name="Preset">Preset number</string>
    <string name="KeyWord">Voice keyword</string>
    <string name="gatewayIP">Gateway IP address</string>
    <string name="area">Area</string>
    <string name="preset">Preset</string>
    <string name="Domain">Domain</string>
    <string name="A">Area</string>
    <string name="Word">Word</string>
    <string name="WhatToDo">What would you like me to do?</string>
</resources>
