<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    tools:context="applications.brightmood.MainActivity">


    <EditText
        android:id="@+id/etWord"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etCtrl"
        android:layout_marginTop="16dp"
        android:hint="@string/KeyWord" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/etCtrl"
        android:layout_below="@+id/etWord"
        android:layout_centerHorizontal="true"
        android:hint="@string/Control"/>


    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/etDomain"
        android:layout_below="@+id/etCtrl"
        android:layout_centerHorizontal="true"
        android:hint="@string/gatewayIP" />


    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/etArea"
        android:layout_below="@+id/etDomain"
        android:layout_centerHorizontal="true"
        android:hint="@string/area_number"/>



    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/etPreset"
        android:layout_below="@+id/etArea"
        android:layout_centerHorizontal="true"
        android:hint="@string/Preset"/>


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnGo"
        android:layout_alignBottom="@+id/btnGo"
        android:layout_alignParentEnd="true"
        android:text="@string/view" />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnAdd"
        android:layout_alignBottom="@+id/btnAdd"
        android:layout_centerHorizontal="true"
        android:text="@string/go" />
</RelativeLayout>
