<?xml version="1.0" encoding="utf-8"?>


<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/relativeLayout1"
    android:layout_width = "fill_parent"
    android:layout_height = "wrap_content">

    <TextView
        android:id = "@+id/textWord"
        android:layout_width = "0dp"
        android:layout_height = "match_parent"
        android:layout_weight = "1"
        android:background = "@drawable/cell_shape"
        android:ellipsize = "end"
        android:padding = "5dp"
        android:text = "@string/Word"
        android:singleLine = "true" />


    <TextView
        android:id = "@+id/textControl"
        android:layout_width = "0dp"
        android:layout_height = "match_parent"
        android:layout_weight = "1"
        android:background = "@drawable/cell_shape"
        android:ellipsize = "end"
        android:padding = "5dp"
        android:text = "@string/Control"
        android:singleLine = "true" />

    <TextView
        android:id = "@+id/textDomain"
        android:layout_width = "0dp"
        android:layout_height = "match_parent"
        android:layout_weight = "1.5"
        android:background = "@drawable/cell_shape"
        android:ellipsize = "end"
        android:padding = "5dp"
        android:text = "@string/Domain"
        android:singleLine = "true" />

    <TextView
        android:id = "@+id/textArea"
        android:layout_width = "0dp"
        android:layout_height = "match_parent"
        android:layout_weight = "1"
        android:background = "@drawable/cell_shape"
        android:ellipsize = "end"
        android:padding = "5dp"
        android:text = "@string/A"
        android:singleLine = "true" />

    <TextView
        android:id = "@+id/textPreset"
        android:layout_width = "0dp"
        android:layout_height = "match_parent"
        android:layout_weight = "1"
        android:background = "@drawable/cell_shape"
        android:ellipsize = "end"
        android:padding = "5dp"
        android:text = "@string/preset"
        android:singleLine = "true" />




</LinearLayout>
